--- a/Services-main/styles.css
+++ b/Services-main/styles.css
@@ -439,11 +439,13 @@ footer .footer-left p {
     justify-content: center; 
     gap: 100px; 
     padding: 20px 0; 
+}
 
 .footer-column {
     display: flex;
     flex-direction: column; 
     align-items: center; 
+}
 
 .footer-column a {
     color: #030303;
