--- a/Services-main/styles.css
+++ b/Services-main/styles.css
@@ -115,26 +115,6 @@ body {
     margin-top: 10px;
     font-size: 1.2em;
 }
-
-.footer {
-    background-color: #007500;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.footer a:hover {
-    text-decoration: underline;
-}
-
 .service-section {    
     display: flex;
     justify-content: space-between;
@@ -455,6 +435,7 @@ footer .footer-left p {
     margin: 5px 0; 
     display: inline-block;
     padding: 5px 10px;
+    font-weight: 550;
 }
 
 .footer-column a:hover {
