--- a/Services-main/services.css
+++ b/Services-main/services.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -8,7 +7,7 @@ body {
 }
 
 a {
-    color: #008000; /* Green color */
+    color: #008000; 
     text-decoration: none;
 }
 
@@ -16,7 +15,7 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Header Styles */
+
 .header {    
     background-color: #ffffff;
     color: #ffffff; 
@@ -77,7 +76,7 @@ a:hover {
     text-decoration: none;
     border-radius: 10px;    
 }
-/* Services Section Styles */
+
 
 .info-section {
     background-image: url(./Images/what-should-you-put-in-your-protein-shake.webp);
@@ -117,7 +116,7 @@ a:hover {
 }
 
 .services-section h1 {
-    color: #008000; /* Green color */
+    color: #008000; 
     font-size: 36px;
 }
 
@@ -127,11 +126,11 @@ a:hover {
 }
 
 .breadcrumb a {
-    color: #000; /* Black color */
+    color: #000; 
 }
 
 .breadcrumb span {
-    color: #000; /* Black color */
+    color: #000; 
     font-weight: bold;
 }
 
@@ -157,7 +156,7 @@ a:hover {
 }
 
 .service-content h2 {
-    color: #008000; /* Green color */
+    color: #008000; 
     font-size: 24px;
     margin-bottom: 10px;
 }
@@ -174,7 +173,7 @@ a:hover {
     font-size: 16px;
 }
 
-/* Pagination Styles */
+
 .pagination {
     display: flex;
     justify-content: center;
@@ -182,7 +181,7 @@ a:hover {
 }
 
 .pagination a {
-    color: #008000; /* Green color */
+    color: #008000; 
     padding: 8px 16px;
     text-decoration: none;
     border: 1px solid #ddd;
@@ -200,7 +199,7 @@ a:hover {
     background-color: #ddd;
 }
 
-/* Footer Styles */
+
 footer {
     
     padding: 0px;
