--- a/Services-main/our_approach.css
+++ b/Services-main/our_approach.css
@@ -268,4 +268,95 @@ button:hover {
 .radio-group input[type="radio"] {
     margin-right: 5px;
 }
+footer {
+    
+    padding: 0px;
+    color: #094620;
+}
+
+footer .footer-content {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 30px;
+    padding-top: 30px;
+    border-bottom: 1px solid #ddd;
+}
+
+footer .footer-left,
+footer .footer-middle,
+footer .footer-right {
+    flex: 1;
+}
+
+footer .footer-left img {
+    display: flex;
+    padding-left: 140px;
+    
+}
+
+footer .footer-left p {
+    padding-left: 140px;
+    margin: 5px 0;
+    line-height: 1.6;
+}
+.footer-middle {
+    display: flex;
+    justify-content: center; 
+    gap: 100px; 
+    padding: 20px 0; 
+}
+
+.footer-column {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+}
+
+.footer-column a {
+    color: #030303;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 5px 0; 
+    display: inline-block;
+    padding: 5px 10px;
+    font-weight: 550;
+}
+
+.footer-column a:hover {
+    background-color: #007500;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+
+
+footer .footer-right{
+    display: flex;
+    size-adjust: 1px;
+    max-width: 11px;
+    padding-right: 600px;
+    
+}
+.footer-right img {
+    display: flex;
+    width: 2000%;
+    height: 100px;
+    margin: 5px; 
+    margin-top: 55px;   
+}
+
+footer .footer-bottom {
+    text-align: center;
+    padding-top: 20px;
+}
+
+footer .footer-bottom p {
+    margin: 5px 0;
+}
+
+footer .footer-bottom a {
+    color: #3987db;
+    text-decoration: none;
+}
 
