--- a/Services-main/stories.css
+++ b/Services-main/stories.css
@@ -101,12 +101,14 @@ body {
 .container {
     width: 85%;
     margin: 0 auto;
+    
 }
 nav ul {
     list-style: none;
     padding: 0;
     display: flex;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 nav ul li {
@@ -121,15 +123,13 @@ nav ul li a {
 .stories {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 60px;
 }
 
-.story {
-    background-color: #fff;
-    border: 1px solid #ddd;
+.story {    
     padding: 15px;
     width: 30%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
 }
 
 .story img {
@@ -174,6 +174,7 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     margin-top: 30px;
+    margin-bottom: 70px;
 }
 
 .page, .next-page {
