Todays Last chages

--- a/Services-main/our_approach.css
+++ b/Services-main/our_approach.css
@@ -66,7 +66,7 @@ body {
     border-radius: 10px;    
 }
 .info-section {
-    background-image: url(./Images/what-should-you-put-in-your-protein-shake.webp);
+    background-image: url(./Images/Approach.jpg);
     background-size: cover;
     background-position: center;
     padding: 260px 10px;
