--- a/Services-main/services.css
+++ b/Services-main/services.css
@@ -79,7 +79,7 @@ a:hover {
 
 
 .info-section {
-    background-image: url(./Images/what-should-you-put-in-your-protein-shake.webp);
+    background-image: url(./Images/Services.jpg);
     background-size: cover;
     background-position: center;
     padding: 260px 10px;
