--- a/Services-main/stories.css
+++ b/Services-main/stories.css
@@ -67,7 +67,7 @@ body {
 
 
 .info-section {
-    background-image: url(./Images/what-should-you-put-in-your-protein-shake.webp);
+    background-image: url(./Images/stories.jpg);
     background-size: cover;
     background-position: center;
     padding: 260px 10px;
