--- a/Services-main/services.css
+++ b/Services-main/services.css
@@ -110,19 +110,19 @@ a:hover {
     font-size: 1.2em;
 }
 .services-section {
-    width: 80%;
-    margin: 0 auto;
+    width: 75%;
+    margin: 5px auto;
     padding: 40px 0;
 }
 
 .services-section h1 {
     color: #008000; 
-    font-size: 36px;
+    font-size: 36px;    
 }
 
 .breadcrumb {
-    font-size: 14px;
-    margin-bottom: 20px;
+    font-size: 16px;
+    margin-bottom: 50px;
 }
 
 .breadcrumb a {
@@ -132,23 +132,25 @@ a:hover {
 .breadcrumb span {
     color: #000; 
     font-weight: bold;
+    
 }
 
 .service-item {
     display: flex;
     align-items: center;
-    margin-bottom: 40px;
-    
+    margin-top: 20px;
+    margin-bottom: 4px;    
     padding: 20px;
     border-radius: 8px;
+    
     
 }
 
 .service-item img {
-    width: 300px;
+    width: 460px;
     height: auto;
-    border-radius: 8px;
-    margin-right: 20px;
+    border-radius: 10px;
+    margin-right: 60px;
 }
 
 .service-content {
