changes for mobile devices

--- a/Services-main/styles.css
+++ b/Services-main/styles.css
@@ -357,8 +357,8 @@ p {
 
 
 .assume {
-    display: flex
-    justify-content: space-around;
+    display: flex;
+    justify-content:space-around;
     padding: 70px;
 }
 .assume h1{
