--- a/Services-main/styles.css
+++ b/Services-main/styles.css
@@ -711,7 +711,7 @@ footer .footer-bottom a {
     
     .text-content p {
         margin-bottom: 15px;
-        font-size: 15px;
+        font-size: 14px;
     }
     
     .read-more {
@@ -720,7 +720,7 @@ footer .footer-bottom a {
         background-color: #00773e;
         color: white;
         text-decoration: none;
-        border-radius: 5px;
+        border-radius: 11px;
         font-weight: bold;
     }
     
@@ -776,7 +776,7 @@ footer .footer-bottom a {
     
     .guide-content img {
 
-        width: 150px; /* Adjust image size */
+        width: 200px; /* Adjust image size */
         padding: 0 10px;        
         
     }
@@ -904,7 +904,7 @@ footer .footer-bottom a {
     footer .footer-content {
         display: flex;
         justify-content: space-between;
-        padding: 30px 0;
+        padding: 0px 0;
         border-bottom: 1px solid #ddd;
         flex-wrap: wrap; /* Ensure responsiveness */
     }
@@ -913,21 +913,20 @@ footer .footer-bottom a {
     footer .footer-middle,
     footer .footer-right {
         flex: 1;
-        min-width: 200px; /* Ensure a minimum width for each section */
-        padding: 0 20px; /* Add horizontal padding for each section */
+        min-width: 400px; /* Ensure a minimum width for each section */
+        padding: 0 0px; /* Add horizontal padding for each section */
     }
     
     footer .footer-left img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        padding-bottom: 10px;
-        max-width: 150px; /* Adjust as needed */
+        display: inline;        
+        padding: 0 20;        
+        padding-bottom: 15px;
+        max-width: 100px; /* Adjust as needed */
     }
     
     footer .footer-left p {
-        text-align: center;
-        margin: 5px 0;
+        text-align: left;
+        margin: 15px 0;
         line-height: 1.6;
         padding: 0 20px;
     }
@@ -973,6 +972,7 @@ footer .footer-bottom a {
     
     .footer-right img {
         max-width: 100px; /* Adjust as needed */
+        padding: 0 20;
         height: auto;
         margin-top: 20px;
         object-fit: contain;
@@ -1004,18 +1004,18 @@ footer .footer-bottom a {
         footer .footer-middle,
         footer .footer-right {
             padding: 10px 0;
-            text-align: center;
+            text-align: start;
         }
     
         footer .footer-left img {
-            margin-bottom: 15px;
+            margin-bottom: 0px;
         }
     
         .footer-middle {
-            flex-direction: column;
-            gap: 20px;
+            display: none; /* Hide the footer-middle section on small screens */
         }
-    }    
+    }
+        
           
 }
 @media (max-width: 800px){
